update directories and some features

--- a/Test/src/CMakeLists.txt
+++ b/Test/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(${SirusPatcher_SOURCE_DIR}/Test/inc)
-include_directories(${SirusPatcher_SOURCE_DIR}/DBCLib/inc)
+include_directories(${SirusPatcher_SOURCE_DIR}/DBC/inc)
 
-# link_directories(${SirusPatcher_SOURCE_DIR}/DBCLib/src)
+# link_directories(${SirusPatcher_SOURCE_DIR}/DBC/src)
 
 add_executable(Test main.cc)
 target_link_libraries(Test DBC)
