--- a/DBC/src/CMakeLists.txt
+++ b/DBC/src/CMakeLists.txt
@@ -2,4 +2,4 @@ include_directories(${SirusPatcher_SOURCE_DIR}/DBC/inc)
 
 file (GLOB SOURCES *.cc)
 
-add_library(DBC SHARED ${SOURCES})
+add_library(DBC STATIC ${SOURCES})
