--- a/DBC/CMakeLists.txt
+++ b/DBC/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_subdirectory(src)
+# include_directories(${SirusPatcher_SOURCE_DIR})
+file (GLOB SOURCES *.cc)
+add_library(dbc STATIC ${SOURCES})
+target_include_directories(dbc PRIVATE ${SirusPatcher_SOURCE_DIR})
