init qt gui and cmake project refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.21)
-project(SirusPatcher LANGUAGES C CXX)
+project(SirusPatcher VERSION 0.1 LANGUAGES CXX)
 
 if (NOT WIN32)
   message(FATAL_ERROR "This project is only supported on Windows")
 endif()
 
-set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_subdirectory(Test)
+add_subdirectory(QtGui)
 add_subdirectory(dbc)
