--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,9 +25,9 @@ jobs:
             release: true
 
       - name: Install Qt
-        uses: jurplel/install-qt-action@v3
+        uses: jurplel/install-qt-action@v3.1.0
         with:
-          version: '6.2.6'
+          version: '6.3.*'
           host: 'windows'
           target: 'desktop'
           arch: 'win64_mingw73'
