--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v3.1.0
         with:
-          version: '6.3.*'
+          version: '6.2.0'
           host: 'windows'
           target: 'desktop'
           arch: 'win64_mingw73'
