--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,9 +32,6 @@ jobs:
           dir: '${{github.workspace}}/qt/'
           install-deps: 'true'
 
-      - name: List files in Qt
-        run: find ${{env.Qt6_Dir}}
-
       - uses: actions/checkout@v3
 
       - name: Configure CMake
@@ -43,4 +40,4 @@ jobs:
         run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -G "CodeBlocks - MinGW Makefiles" -B '${{github.workspace}}'/build
 
       - name: Build
-        run: cmake --build '${{github.workspace}}'/build --target QtGui
+        run: cmake --build '${{github.workspace}}'/build --config ${{env.BUILD_TYPE}} --target QtGui
