--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Configure CMake
         env:
           CMAKE_PREFIX_PATH: ${{env.Qt6_Dir}}
-        run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -G "CodeBlocks - MinGW Makefiles" -B '${{github.workspace}}'/build
+        run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B ${{github.workspace}}/build
 
       - name: Build
-        run: cmake --build '${{github.workspace}}'/build --config ${{env.BUILD_TYPE}} --target QtGui
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target QtGui
