--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,9 +35,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Configure CMake
-        env:
-          CMAKE_PREFIX_PATH: ${{env.Qt6_Dir}}
-        run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B ${{github.workspace}}/build
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
       - name: Build
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target QtGui
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
