--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,6 +34,10 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - uses: jwlawson/actions-setup-cmake@v1.13
+          with:
+            cmake-version: 'latest'
+
       - name: Configure CMake
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
