--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,9 +2,9 @@ name: CMake
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 env:
   BUILD_TYPE: Release
@@ -13,35 +13,37 @@ jobs:
   build:
     runs-on: windows-latest
     defaults:
-        run:
-            shell: msys2 {0}
+      run:
+        shell: msys2 {0}
 
     steps:
       - uses: msys2/setup-msys2@v2
         with:
-            msystem: mingw64
-            install: >-
-              git
-              make
-            pacboy: >-
-              toolchain:p
-              cmake:p
-              ninja:p
+          msystem: mingw64
+          install: >-
+            git
+            make
+          pacboy: >-
+            toolchain:p
+            cmake:p
+            ninja:p
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v3.1.0
         with:
-          version: '6.3.1'
-          host: 'windows'
-          target: 'desktop'
-          arch: 'win64_mingw'
-          dir: '${{github.workspace}}/qt/'
-          install-deps: 'true'
+          version: "6.3.1"
+          host: "windows"
+          target: "desktop"
+          arch: "win64_mingw"
+          dir: "${{github.workspace}}/qt/"
+          install-deps: "true"
 
       - uses: actions/checkout@v3
 
       - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        env:
+          CMAKE_PREFIX_PATH: ${{env.Qt6_Dir}}
+        run: cmake -B ${{github.workspace}}\build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
       - name: Build
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        run: cmake --build ${{github.workspace}}\build --config ${{env.BUILD_TYPE}}
