--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,11 +16,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install correct version of mingw
-        uses: crazy-max/ghaction-chocolatey@v1
-        with:
-          args: install mingw --version=8.1.0  -y
-
       - name: Install Qt
         uses: jurplel/install-qt-action@v3.1.0
         with:
@@ -34,7 +29,7 @@ jobs:
       - name: Configure CMake
         env:
           CMAKE_PREFIX_PATH: ${{env.Qt6_Dir}}
-        run: cmake -DCMAKE_PREFIX_PATH=${{env.Qt6_Dir}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B ${{github.workspace}}/build -G "CodeBlocks - MinGW Makefiles"
+        run: cmake -DCMAKE_PREFIX_PATH=${{env.Qt6_Dir}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B ${{github.workspace}}/build
 
       - name: Build
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target all
