--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,7 +22,7 @@ jobs:
           version: "6.3.1"
           host: "windows"
           target: "desktop"
-          arch: "win64_mingw81"
+          arch: 'win64_msvc2019_64'
           dir: "${{github.workspace}}/qt/"
           install-deps: "true"
 
