--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,4 +32,4 @@ jobs:
         run: cmake -DCMAKE_PREFIX_PATH=${{env.Qt6_Dir}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B ${{github.workspace}}/build
 
       - name: Build
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target all
+        run: cmake --build ${{github.workspace}}\build --config ${{env.BUILD_TYPE}} --target ALL_BUILD
