Finally we got it ✅

--- a/DBC/CMakeLists.txt
+++ b/DBC/CMakeLists.txt
@@ -1,3 +1,6 @@
-file (GLOB SOURCES *.cc)
-add_library(dbc STATIC ${SOURCES})
-target_include_directories(dbc PRIVATE ${SirusPatcher_SOURCE_DIR})
+file(GLOB TARGET_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/*.h
+)
+add_library(DBC STATIC ${TARGET_SOURCES})
+target_include_directories(DBC PRIVATE ${SirusPatcher_SOURCE_DIR})
