--- a/DBC/CMakeLists.txt
+++ b/DBC/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB TARGET_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/*.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/*.h
 )
 add_library(DBC STATIC ${TARGET_SOURCES})
