Full refactoring with threads

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,9 @@ set(EXTERNAL_DLL_LOCATION ${EXTERNAL_INSTALL_LOCATION}/bin)
 
 ExternalProject_Add(stormlib
   GIT_REPOSITORY https://github.com/ladislav-zezula/StormLib
-  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTERNAL_INSTALL_LOCATION} -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTERNAL_INSTALL_LOCATION}
+             -DBUILD_SHARED_LIBS=ON
+             -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
 )
 
 include_directories(${CMAKE_BINARY_DIR})
